--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,41 @@
 @import 'vendors/bootstrap';
 @import 'vendors/slider';
 @import 'pages/portfolio';
+
+.logo-container {
+  position: relative;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.logo {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+
+.badge-container {
+  transition: 0.5s ease;
+  width: 100%;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.logo-container:hover .logo {
+  opacity: 0.2;
+}
+
+.logo-container:hover .badge-container {
+  opacity: 1;
+}
+
+.color-primary {
+  color: #39bb88;
+}
