:sparkles: dark mode

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,4 @@
+@import 'base';
 @import 'vendors/bootstrap';
 @import 'vendors/slider';
 @import 'pages/portfolio';
@@ -6,6 +7,12 @@
   position: relative;
   cursor: pointer;
   padding: 10px;
+}
+
+.btn:focus,
+.btn:active {
+  outline: none !important;
+  box-shadow: none;
 }
 
 .logo {
@@ -55,5 +62,15 @@
     to {
       -webkit-transform: rotate(360deg);
     }
+  }
+}
+
+.theme-img {
+  opacity: 0.5;
+  transition: opacity 200ms linear;
+
+  &:hover {
+    opacity: 1;
+    transition: opacity 200ms linear;
   }
 }
